--- a/pom.xml
+++ b/pom.xml
@@ -9,12 +9,10 @@
   <packaging>pom</packaging>
   <version>1.0-SNAPSHOT</version>
   <modules>
-    <module>reactor-model</module>
-      <module>nio</module>
+    <module>reactor</module>
+    <module>nio</module>
   </modules>
-
   <name>nettydemo</name>
-  <url>http://www.example.com</url>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
