--- a/reactor/pom.xml
+++ b/reactor/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>reactor-model</artifactId>
+    <artifactId>reactor</artifactId>
 
 
 </project>
