Netty实现原理流程图

--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
   <modules>
     <module>reactor</module>
     <module>nio</module>
+    <module>netty-core</module>
   </modules>
   <name>nettydemo</name>
 
